--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,16 @@
 {
-  "name": "My Community App",
-  "short_name": "GroupApp",
+  "name": "EP VIP Community",
+  "short_name": "EP VIP",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#1877F2",
-  "theme_color": "#1877F2",
+  "background_color": "#001f3f",
+  "theme_color": "#001f3f",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/124/124010.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/124/124010.png",
+      "src": "icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
