--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "EP VIP Community",
-  "short_name": "EP VIP",
+  "name": "Enjoy Pinellas",
+  "short_name": "Enjoy Pinellas",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#001f3f",
